Changing main source file to allow remote git dependency usage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cornerstone-core",
   "version": "2.2.8",
   "description": "HTML5 Medical Image Viewer Component",
-  "main": "./dist/cornerstone.js",
+  "main": "./src/index.js",
   "keywords": [
     "DICOM",
     "medical",
@@ -11,7 +11,7 @@
   "author": "Chris Hafey",
   "homepage": "https://github.com/cornerstonejs/cornerstone",
   "license": "MIT",
-  "module": "./dist/cornerstone.js",
+  "module": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/cornerstonejs/cornerstone.git"
