--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cornerstone-core",
+  "name": "cornerstone-core-temp",
   "version": "2.2.8",
   "description": "HTML5 Medical Image Viewer Component",
   "main": "./src/index.js",
